--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -2,9 +2,8 @@
     padding: 10px 0px;
     height: 50px;
     width: 100vw;
-    left: 0;
-    top: 0;
-    position: fixed;
+    margin: 0;
+    position: relative;
     z-index: 99;
     box-shadow: 0 0 20px -8px #aaa;
 }
